# dalang

./: .gitignore  Cargo.toml  DEV_RULES.md  Dockerfile  Makefile  PRD.md  README.md  SPRINT_PLANNING.md  TOOLING_SETUP.md  docker-compose.yml  docker-entrypoint.sh
.agents/rules/: dalang-development-rules-guidelines.md
.agents/skills/dalang-ai-agent-skills-tooling-setup/: SKILL.md
.github/workflows/: deploy-docs.yml  deploy-landing-pages.yml  release.yml
crates/dalang-adapters/: Cargo.toml
crates/dalang-adapters/src/: lib.rs  ws_engine_event.rs
crates/dalang-adapters/src/adapters/: mod.rs
crates/dalang-adapters/src/adapters/inbound/cli/: mod.rs
crates/dalang-adapters/src/adapters/inbound/web/: embedded.rs  events.rs  mod.rs  persistence.rs  state.rs  tests.rs
crates/dalang-adapters/src/adapters/inbound/web/handlers/: chat.rs  mod.rs  reports.rs  sessions.rs  settings.rs  skills.rs
crates/dalang-adapters/src/adapters/outbound/auth/: copilot.rs  gemini_codeassist.rs  persistence.rs
crates/dalang-adapters/src/adapters/outbound/browser_cdp/: mod.rs
crates/dalang-adapters/src/adapters/outbound/browser_cdp/browser/: cookies.rs  dom_extraction.rs  dom_query.rs  interaction.rs  mod.rs  navigation.rs  network.rs  screenshots.rs  storage.rs  tabs.rs
crates/dalang-adapters/src/adapters/outbound/llm/: copilot.rs  gemini_codeassist.rs  mod.rs  openai.rs
crates/dalang-adapters/src/adapters/outbound/os_command/: mod.rs
crates/dalang-adapters/src/adapters/outbound/persistence/: mod.rs
crates/dalang-adapters/src/adapters/outbound/skills_parser/: bundled.rs  mod.rs
crates/dalang-adapters/src/session_files/: mod.rs
crates/dalang-adapters/tests/: browser_chromium_smoke.rs
crates/dalang-application/: Cargo.toml
crates/dalang-application/src/: lib.rs
crates/dalang-application/src/application/: browser_tool_dispatch.rs  mod.rs
crates/dalang-application/src/application/ports/: llm_port.rs  mod.rs  os_port.rs  skill_catalog.rs  storage_port.rs
crates/dalang-application/src/application/usecases/: auth_service.rs  memory.rs  orchestrator.rs
crates/dalang-application/src/application/usecases/orchestrator/: autonomous_loop.rs  chat.rs  interactive_loop.rs  mod.rs  scan_loop.rs  tests.rs
crates/dalang-application/src/skills_parser/: fs_catalog.rs  mod.rs
crates/dalang-cli/: Cargo.toml
crates/dalang-cli/src/: init_env.rs  login_flow.rs  main.rs  orchestrator_wiring.rs  runtime.rs
crates/dalang-domain/: Cargo.toml
crates/dalang-skills/: Cargo.toml
crates/dalang-skills/src/: lib.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/architecture/: cdp-browser.md  core-engine.md  executor.md  llm-providers.md  overview.md  web-server.md
docs/guide/: authentication.md  auto-pilot.md  docker-deployment.md  getting-started.md  installation.md  interactive-mode.md  quick-start.md  scan-mode.md  web-ui.md
docs/skills/: built-in.md  creating-skills.md  defensive-prompting.md  overview.md
skills/: amass_enum.md  arjun_params.md  aws_cli_enum.md  dalfox_xss.md  dnsx_resolve.md  docker_escape_check.md  feroxbuster_recon.md  ffuf_fuzzer.md  gobuster_dir.md  header_analyzer.md  httpx_probe.md  hydra_bruteforce.md  jwt_analysis.md  katana_crawl.md  kubectl_audit.md  masscan_fast.md  naabu_portscan.md  netexec_enum.md  nikto_scanner.md  nmap_scanner.md  nuclei_vuln_scan.md  rustscan_audit.md  smbclient_enum.md  snmpwalk_gather.md  sqlmap_tester.md  ssl_scan.md  subdomain_enum.md  testing.md  theharvester_osint.md  trivy_scan.md  trufflehog_secrets.md  web-audit.md  wpscan_audit.md  xss_strike.md
src/: cli.rs  main.rs
src/adapters/: mod.rs
src/adapters/inbound/: mod.rs
src/adapters/outbound/: mod.rs
src/application/: mod.rs
src/application/ports/: browser_port.rs  llm_port.rs  storage_port.rs
src/application/usecases/: auth_service.rs  memory.rs  mod.rs  orchestrator.rs
src/auth/: cli_extractor.rs  gemini_codeassist.rs  mod.rs  oauth.rs  persistence.rs
src/cdp/: browser.rs
src/core/: engine.rs  memory.rs  mod.rs  safety.rs  scope.rs  tool_call.rs
src/domain/: mod.rs  models.rs  scope.rs  tool_call.rs
src/executor/: mod.rs
src/llm/: copilot.rs  gemini_codeassist.rs  mod.rs  openai.rs
src/skills_parser/: bundled.rs  mod.rs
src/web/: embedded.rs  events.rs  mod.rs  persistence.rs  state.rs  tests.rs
src/web/handlers/: chat.rs  reports.rs  sessions.rs  settings.rs  skills.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  app.css  main.ts
web2/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  wrangler.jsonc
web2/e2e/: demo.test.ts
(+94 files in other folders)
