[package]
name = "dalang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chromiumoxide = "0.9.1"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
keyring = "2.3.2"
tiny_http = "0.12.0"
url = "2.5.0"
open = "5.3.2"
regex = "1.12.3"
lazy_static = "1.5.0"
dialoguer = "0.12.0"
chrono = "0.4.44"
libc = "0.2"
dirs = "5"

# Web UI
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["mime-guess"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
pulldown-cmark = "0.12"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
