[workspace]
members = [
  "crates/dalang-adapters",
  "crates/dalang-application",
  "crates/dalang-cli",
  "crates/dalang-domain",
  "crates/dalang-skills",
]
default-members = [
  "crates/dalang-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = "0.4.44"
chromiumoxide = "0.9.1"
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6"
dialoguer = "0.12.0"
dirs = "5"
futures = "0.3.32"
include_dir = "0.7.4"
is_elevated = "0.1.2"
keyring = "2.3.2"
lazy_static = "1.5.0"
libc = "0.2"
mime_guess = "2"
open = "5.3.2"
pulldown-cmark = "0.12"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tiny_http = "0.12.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
url = "2.5.0"
uuid = { version = "1", features = ["v4", "serde"] }
