[package]
name = "dalang-application"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
is_elevated.workspace = true

dalang-domain = { path = "../dalang-domain" }
dalang-skills = { path = "../dalang-skills" }
